Deprecated post for registry. PUT is used for creation instead. fixes #69
